// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should display a help message when there is less than 2 characters 1`] = `
<div>
  <input
    autoComplete="off"
    onChange={[Function]}
    placeholder="projects.search"
    type="search"
    value="a"
  />
  <span
    className="note spacer-left"
  >
    select2.tooShort.2
  </span>
</div>
`;

exports[`should display a help message when there is less than 2 characters 2`] = `
<div>
  <input
    autoComplete="off"
    onChange={[Function]}
    placeholder="projects.search"
    type="search"
    value="foo"
  />
</div>
`;

exports[`should render correctly without any search query 1`] = `
<div>
  <input
    autoComplete="off"
    onChange={[Function]}
    placeholder="projects.search"
    type="search"
    value=""
  />
</div>
`;

exports[`should render with a search query 1`] = `
<div>
  <input
    autoComplete="off"
    onChange={[Function]}
    placeholder="projects.search"
    type="search"
    value="foo"
  />
</div>
`;
